# shield-maker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: badge.rs  color.rs  flat_square_style.rs  flat_style.rs  lib.rs  plastic_style.rs  xml.rs
tests/: tests.rs
